--- a/algorithm/algorithm/algorithm.vcxproj.filters
+++ b/algorithm/algorithm/algorithm.vcxproj.filters
@@ -315,5 +315,11 @@
     <ClCompile Include="7568.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="4811.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="2961.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
