--- a/algorithm/algorithm/algorithm.vcxproj.filters
+++ b/algorithm/algorithm/algorithm.vcxproj.filters
@@ -324,5 +324,11 @@
     <ClCompile Include="1914.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="9421.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="빡쌍.cpp">
+      <Filter>알고리즘 스터디</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
