--- a/algorithm/algorithm/algorithm.vcxproj.filters
+++ b/algorithm/algorithm/algorithm.vcxproj.filters
@@ -378,5 +378,8 @@
     <ClCompile Include="2573.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="5525.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
