--- a/algorithm/algorithm/algorithm.vcxproj.filters
+++ b/algorithm/algorithm/algorithm.vcxproj.filters
@@ -390,5 +390,8 @@
     <ClCompile Include="10026.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="1764.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
